--- a/Assets/style.css
+++ b/Assets/style.css
@@ -29,7 +29,8 @@ textarea {
   color: #000000;
   border-top: 1px dashed #000000;
 }
-
+ /* colors for past, present and future */
+ 
 .past {
   background-color: #d3d3d3;
   color: white;
